crates/tele_parser/tests/snapshots/parse__nested_at_rule.snap
---
source: crates/tele_parser/tests/parse.rs
assertion_line: 96
expression: parser.parse()

---
Ok(
    StyleSheetNode {
        loc: Loc {
            start: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end: Pos {
                offset: 133,
                line: 9,
                column: 4,
            },
        },
        statements: [
            AtRule(
                AtRuleNode {
                    loc: Loc {
                        start: Pos {
                            offset: 4,
                            line: 2,
                            column: 5,
                        },
                        end: Pos {
                            offset: 30,
                            line: 2,
                            column: 31,
                        },
                    },
                    name: "supports",
                    prelude: "(display: flex)",
                    block: [
                        AtRule(
                            AtRuleNode {
                                loc: Loc {
                                    start: Pos {
                                        offset: 36,
                                        line: 3,
                                        column: 7,
                                    },
                                    end: Pos {
                                        offset: 73,
                                        line: 3,
                                        column: 44,
                                    },
                                },
                                name: "media",
                                prelude: "screen and (min-width: 900px)",
                                block: [
                                    RuleSet(
                                        RuleSetNode {
                                            loc: Loc {
                                                start: Pos {
                                                    offset: 80,
                                                    line: 4,
                                                    column: 8,
                                                },
                                                end: Pos {
                                                    offset: 120,
                                                    line: 6,
                                                    column: 9,
                                                },
                                            },
                                            prelude: "article",
                                            declarations: [
                                                DeclarationNode {
                                                    loc: Loc {
                                                        start: Pos {
                                                            offset: 98,
                                                            line: 5,
                                                            column: 10,
                                                        },
                                                        end: Pos {
                                                            offset: 111,
                                                            line: 5,
                                                            column: 23,
                                                        },
                                                    },
                                                    name: "display",
                                                    value: "flex",
                                                    important: false,
                                                },
                                            ],
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
