crates/tele_parser/tests/snapshots/parse__percentage_token.snap
---
source: crates/tele_parser/tests/parse.rs
assertion_line: 59
expression: parser.parse()

---
Ok(
    StyleSheetNode {
        loc: Loc {
            start: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end: Pos {
                offset: 40,
                line: 5,
                column: 4,
            },
        },
        statements: [
            RuleSet(
                RuleSetNode {
                    loc: Loc {
                        start: Pos {
                            offset: 5,
                            line: 2,
                            column: 6,
                        },
                        end: Pos {
                            offset: 37,
                            line: 4,
                            column: 7,
                        },
                    },
                    prelude: ".foo",
                    declarations: [
                        DeclarationNode {
                            loc: Loc {
                                start: Pos {
                                    offset: 18,
                                    line: 3,
                                    column: 8,
                                },
                                end: Pos {
                                    offset: 29,
                                    line: 3,
                                    column: 19,
                                },
                            },
                            name: "height",
                            value: "100%",
                            important: false,
                        },
                    ],
                },
            ),
        ],
    },
)
