crates/tele_parser/tests/snapshots/parse__ruleset_with_a_single_decl_no_trailing_semicolon.snap
---
source: crates/tele_parser/tests/parse.rs
assertion_line: 16
expression: parser.parse()

---
Ok(
    RefCell {
        value: StyleSheetNode {
            loc: Loc {
                start: Pos {
                    offset: 0,
                    line: 1,
                    column: 1,
                },
                end: Pos {
                    offset: 23,
                    line: 1,
                    column: 24,
                },
            },
            statements: [
                RuleSet(
                    RefCell {
                        value: RuleSetNode {
                            loc: Loc {
                                start: Pos {
                                    offset: 2,
                                    line: 1,
                                    column: 3,
                                },
                                end: Pos {
                                    offset: 21,
                                    line: 1,
                                    column: 22,
                                },
                            },
                            prelude: ".foo",
                            prelude_tokens: [
                                Token {
                                    token_type: Delim,
                                    start_pos: Pos {
                                        offset: 2,
                                        line: 1,
                                        column: 3,
                                    },
                                    end_pos: Pos {
                                        offset: 3,
                                        line: 1,
                                        column: 4,
                                    },
                                    content: ".",
                                },
                                Token {
                                    token_type: Ident,
                                    start_pos: Pos {
                                        offset: 3,
                                        line: 1,
                                        column: 4,
                                    },
                                    end_pos: Pos {
                                        offset: 6,
                                        line: 1,
                                        column: 7,
                                    },
                                    content: "foo",
                                },
                                Token {
                                    token_type: WhiteSpace,
                                    start_pos: Pos {
                                        offset: 6,
                                        line: 1,
                                        column: 7,
                                    },
                                    end_pos: Pos {
                                        offset: 7,
                                        line: 1,
                                        column: 8,
                                    },
                                    content: " ",
                                },
                            ],
                            declarations: [
                                RefCell {
                                    value: DeclarationNode {
                                        loc: Loc {
                                            start: Pos {
                                                offset: 9,
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Pos {
                                                offset: 19,
                                                line: 1,
                                                column: 20,
                                            },
                                        },
                                        name: "color",
                                        name_tokens: [
                                            Token {
                                                token_type: Ident,
                                                start_pos: Pos {
                                                    offset: 9,
                                                    line: 1,
                                                    column: 10,
                                                },
                                                end_pos: Pos {
                                                    offset: 14,
                                                    line: 1,
                                                    column: 15,
                                                },
                                                content: "color",
                                            },
                                        ],
                                        value: "red",
                                        value_tokens: [
                                            Token {
                                                token_type: Ident,
                                                start_pos: Pos {
                                                    offset: 16,
                                                    line: 1,
                                                    column: 17,
                                                },
                                                end_pos: Pos {
                                                    offset: 19,
                                                    line: 1,
                                                    column: 20,
                                                },
                                                content: "red",
                                            },
                                            Token {
                                                token_type: WhiteSpace,
                                                start_pos: Pos {
                                                    offset: 19,
                                                    line: 1,
                                                    column: 20,
                                                },
                                                end_pos: Pos {
                                                    offset: 20,
                                                    line: 1,
                                                    column: 21,
                                                },
                                                content: " ",
                                            },
                                        ],
                                        important: false,
                                    },
                                },
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
