crates/tele_parser/tests/snapshots/parse__skip_comments.snap
---
source: crates/tele_parser/tests/parse.rs
assertion_line: 47
expression: parser.parse()

---
Ok(
    StyleSheetNode {
        loc: Loc {
            start: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end: Pos {
                offset: 180,
                line: 6,
                column: 4,
            },
        },
        statements: [
            RuleSet(
                RuleSetNode {
                    loc: Loc {
                        start: Pos {
                            offset: 21,
                            line: 2,
                            column: 22,
                        },
                        end: Pos {
                            offset: 161,
                            line: 5,
                            column: 23,
                        },
                    },
                    prelude: ".foo",
                    declarations: [
                        DeclarationNode {
                            loc: Loc {
                                start: Pos {
                                    offset: 64,
                                    line: 3,
                                    column: 22,
                                },
                                end: Pos {
                                    offset: 138,
                                    line: 4,
                                    column: 52,
                                },
                            },
                            name: "color",
                            value: "red",
                            important: true,
                        },
                    ],
                },
            ),
        ],
    },
)
